css/theme.css
/* ... */
.theme-list-table-action .ui-buttonset {
  margin-right: 2px;
  margin-top: 2px;
  float: right;
  height: 20px;
}

.theme-list-table-container input.theme-form-submit-update  {
  background: url(../images/green-button-bg.png) repeat-x;
  /*border: 1px solid #648e20;*/
  color: #e1852e; 
  padding-bottom: 2px;
  padding-top: 2px;
}

.theme-list-table-container input.theme-form-submit-update:hover {
  background: url(../images/green-button-bg-hover.png) repeat-x;
  border: 1px solid #A5A4A4;
}

.theme-list-table-container input.theme-form-submit-update, x:-moz-any-link, x:default {
  padding-top:0px;
}

/* ------------------------------------------------------------------------- */
/* Summary Table */
/* ------------------------------------------------------------------------- */

.theme-summary-table {
  border-bottom: 1px solid #e1e1e1;
}

.theme-summary-table-container {
  margin-bottom: 9px;
  float: left;
  width: 100%;
}

.theme-summary-table-header {
  background: #FFFFFF url(../images/header-bg-green.png) repeat-x;
  height: 23px;
  padding: 5px;
  padding-left: 0px; padding-right: 0px;
  color: #ffffff;
  font-weight: bold;
  width: 100%;
  ^width: 100%;
  margin-left: 0px;
}

.theme-summary-table-title {
  float: left;
  padding-left: 16px;
  padding-top: 3px;
  ^padding-top: 1px;
  ^padding-bottom: 2px;
  font-weight: normal;
  font-size: 14px;
  font-family: arial;
}
.theme-summary-table-action {
  text-align: right;
  padding: 0 !important;
  font-size: 11px !important;
}

.theme-summary-table-entry-state {
  padding-left: 8px;
}

table.display td {
  padding: 3px 6px;
}

/* jQuery and Datatables overrides */
/* The following two styles give us much more room to display information
 * The default css has too much left/right spacing (15px) */

.theme-summary-table-header input {
  padding-top: 2px;
}
.theme-summary-table td, .theme-summary-table th {
  border: none;
}

table.theme-summary-table.theme-summary-table-large.display td {
  padding: 1px 5px;
}
table.theme-summary-table.theme-summary-table-small.display td {
  padding: 1px 5px;
}

table.display thead th div.DataTables_sort_wrapper {
  padding-left: 5px;
}

.datatables_info { margin-left: 0px; }
.datatables_length { margin-left: 13px; }
.datatables_paginate { position: relative; }

/* ------------------------------------------------------------------------- */
/* Forms */
/* ------------------------------------------------------------------------- */

/* Aaron - this was missed when I did the CSS sanity check.
 * Adding fixes some things, but breaks the login screen :-( */

.theme-form-container {
    margin-bottom: 10px;
    ^margin-top: 0px;
    float: left;
    width: 100.1%;
}

.theme-login-container .theme-form-container {
  width: 135px;	
}

.theme-form-wrapper {
  background: #FFFFFF url(../images/header-bg-grey.png);
  background-repeat: repeat-x;
  border-radius: 9px;
  -moz-border-radius: 9px;
  -webkit-border-radius: 9px;
  border: 1px solid #e1e1e1;
  width: 100%;
  float: left;
  padding-bottom: 5px;
  margin-bottom: 0px;
}

.theme-form-wrapper .theme-fieldset {
  border: none;
  width: 490px;
}

/* FIXME: goes with review above
.theme-form-wrapper table {
  width: 505px;
}
*/

.theme-form-wrapper td {
  padding: 5px;
}
.theme-form-header {
  height: 38px;
/*
  line-height: 24px;
  float: left;
*/
/*  width: 490px;*/
}

.theme-form-status-working {
  background-image: url(../images/loading_small.gif);
  background-repeat: no-repeat;
  padding-left: 15px;
  margin: auto;
  display: inline-block;
  clear: both;
}

/* Whirly */
.theme-form-header-working {
  background-image: url(../images/loading.gif);
  background-repeat: no-repeat;
  height: 23px;
  padding-top: 4px;
  padding-left: 25px;
  margin: auto;
  display: inline-block;
}

.theme-form-header-heading {
  white-space: nowrap;
  position: relative;
  left: 10px;
  color: #98bb60; 
  font-weight: normal;
  font-size: 14px;
  margin-top: 0px;
  clear: both;
  width: 300px;
  margin: 0;
  padding: 0;
  line-height: 22px;
}

.theme-form-header-status {
  left: 10px;
  color: #98bb60; 
  font-weight: normal;
  font-size: 14px;
  margin-top: 0px;
  clear: both;
  width: 188px;
  margin: 0;
  padding: 0;
  line-height: 22px;
  text-align: right;
}

.theme-form-banner {
  padding: 15px !important;
  padding-bottom: 4px;
  background: transparent;
}

.theme-button-set-last .theme-form-submit-custom .theme-form-unimportant .ui-button .ui-widget .ui-state-default .ui-corner-right {
  padding-top: 1px;
}

/* TODO: if this needs to be enabled, please use theme-x name that is descriptive */
/*
.check {
  padding-top: 2px;
}
*/

/* ------------------------------------------------------------------------- */
/* Charts */
/* ------------------------------------------------------------------------- */

.theme-chart-wrapper {
  background: #FFFFFF url(../images/header-bg-grey.png);
  background-repeat: repeat-x;
  border-radius: 9px;
  -moz-border-radius: 9px;
  -webkit-border-radius: 9px;
  border: 1px solid #e1e1e1;
   width: 505px; 
  ^width: 100%;
  float: left;
  padding-bottom: 5px;
  margin-bottom: 10px;
}

.theme-chart-header {
  height: 38px;
}

.theme-chart-payload {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 25px;
  padding-left: 15px;
}

/* ------------------------------------------------------------------------- */
/* Fields and Validation */
/* ------------------------------------------------------------------------- */

td.theme-field-left {
  text-align: right;
  width: 45%;
  padding: 5 4 5 0;  
  background: #fafafa;
  vertical-align: top;
  white-space: nowrap;
}

td.theme-field-right {
  text-align: left;
  width: 55%;
  padding-left: 4px;  
}

.theme-field-file {
  float: left;
  line-height: 25px;
  height: 33px;
  width: 450px;
}

.theme-field-file .theme-field-right, x:-moz-any-link, x:default {margin-top: 5px;}

.theme-field-text .theme-field-right {
  padding-top: 3px;
}
/* ... */

